plugins {
    id 'tanagra.java-conventions'
}

sourceCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
    maven {
        url 'https://broadinstitute.jfrog.io/broadinstitute/libs-release/'
    }
    maven {
        url 'https://broadinstitute.jfrog.io/broadinstitute/libs-snapshot-local/'
    }
    maven {
        url 'https://packages.confluent.io/maven/'
    }
}

dependencies {
    implementation "com.fasterxml.jackson.core:jackson-core:${gradle.vJackson}"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${gradle.vJackson}"

    implementation "org.apache.commons:commons-text:${gradle.vApacheCommonsText}"
    implementation "org.slf4j:slf4j-api:${gradle.vSlf4jApi}"
    implementation 'ch.qos.logback:logback-classic:1.5.6'

    // GCP libraries versions are controlled by the BOM specified in buildSrc.
    implementation 'com.google.guava:guava'

    // Command parsing
    implementation "info.picocli:picocli:${gradle.vPicocliVersion}"
    annotationProcessor "info.picocli:picocli-codegen:${gradle.vPicocliVersion}"

    // Static analysis
    pmd "net.sourceforge.pmd:pmd-ant:${gradle.vPmd}"
    compileOnly "com.github.spotbugs:spotbugs-annotations:${gradle.vSpotBugs}"
    testCompileOnly "com.github.spotbugs:spotbugs-annotations:${gradle.vSpotBugs}"
}
